correction du main

--- a/predictions/templates/predictions/employersPredictions.html
+++ b/predictions/templates/predictions/employersPredictions.html
@@ -71,7 +71,7 @@
           </div>
           <h4>Job Campaign Conversion</h4>
           <p>Predict the success rate of your job postings and recruitment campaigns.</p>
-          <button class="btn btn-common" data-toggle="modal" data-target="#campaignModal">Predict Conversion</button>
+          <a href="{% url 'predictions:campaign_conversion' %}" class="btn btn-common">Predict Conversion</a>
         </div>
       </div>
       
